tests/templatetest/foo/bar/Test.java
package foo.bar;

import edu.ucr.cs.riple.taint.ucrtainting.qual.*;

public class Test {
  //    void test(Engine engine){
  //        @RUntainted String parentTheme;
  //        // :: error: assignment
  //        while ((parentTheme = (String) engine.getThemeProps().get("parent")) != null) {
  //
  //        }
  //    }

  //    interface Engine {
  //        Map getThemeProps();
  //    }
}
